"In toc the order of the tree itmes sequence is in wrong position fixed"

--- a/src/main/java/org/ednovo/gooru/client/mvp/folder/toc/util/folderCollectionView.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/folder/toc/util/folderCollectionView.css
@@ -54,7 +54,7 @@
 }
 .sequenceNumner{
 	position: absolute;
-	margin-left: -56px;
+	margin-left: -70px;
 	padding-right:10px;
 	text-align: right;
 	color: #06c;
